# livesub

./: .gitignore  README.md  live_transcript.py  livesub  pyproject.toml
